Make JVM package proof one dependency